# core

./: .envrc  .gitignore  .travis.yml  Flatr-App-Core.cabal  Flatr-App-Core.nix  LICENSE  README.md  Spock-example.cabal  api.raml  default.nix  example.dhall  shell.nix  smtpConfig.dhall  stack.yaml
app/: Config.hs  Crypto.hs  Mail.hs  Main.hs  Util.hs  api.db
app/Model/: CoreTypes.hs  JsonTypes.hs  SqlTypes.hs
app/Model/JsonTypes/: Info.hs  Invitation.hs  InvitationIn.hs  LoginCredentials.hs  Parsing.hs  Registration.hs  Task.hs  TaskIn.hs  Turn.hs  User.hs
app/Query/: Invitation.hs  Util.hs
app/Web/: App.hs  Auth.hs
app/Web/Endpoints/: Auth.hs  Info.hs  Invitation.hs  Tasks.hs  Users.hs
nixpkgs/: default.nix  src.json
