name:                Flatr-App-Core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/flatrapp/core
license:             Apache
license-file:        LICENSE
author:              Daniel Sch채fer, Leon Sch체rmann
maintainer:          flatrapp@danielschaefer.me
copyright:           2017 Daniel Sch채fer and Leon Sch체rmann
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Flatr-App-Core-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock >=0.11
                     , text
                     , mtl
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , http-types
                     , jwt
                     , containers
                     , time
                     , transformers
                     , random
                     , configurator
                     , hvect
                     , word8
                     , bytestring
                     , base16-bytestring >=0.1
                     , cryptohash >=0.11
  default-language:    Haskell2010

test-suite Flatr-App-Core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FlatrApp-Core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flatrapp/core
