name:                Flatr-App-Core
version:             0.1.0.0
homepage:            https://github.com/flatrapp/core
license:             Apache
license-file:        LICENSE
author:              Daniel Sch채fer, Leon Sch체rmann
maintainer:          flatrapp@danielschaefer.me
copyright:           2018 Daniel Sch채fer and Leon Sch체rmann
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Flatr-App-Core-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock >=0.11
                     , text
                     , mtl
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , http-types
                     , jwt
                     , containers
                     , time
                     , iso8601-time
                     , transformers
                     , random
                     , configurator
                     , hvect
                     , word8
                     , bytestring
                     , base16-bytestring >=0.1
                     , cryptohash >=0.11
                     , cryptonite
                     , regex-pcre
                     , esqueleto
                     , formatting
                     , smtp-mail
                     , mime-mail
                     , network
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flatrapp/core
