name:                Flatr-App-Core
version:             0.1.0.0
homepage:            https://github.com/flatrapp/core
license:             Apache
license-file:        LICENSE
author:              Daniel Sch채fer, Leon Sch체rmann
maintainer:          flatrapp@danielschaefer.me
copyright:           2018 Daniel Sch채fer and Leon Sch체rmann
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable flatr-core
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base                              >= 4.9.1  && < 4.10
                     , Spock                             >= 0.12.0 && < 0.13
                     , aeson                             >= 1.1.2  && < 1.2
                     , base16-bytestring                 >= 0.1.1  && < 0.2
                     , bytestring                        >= 0.10.8 && < 0.11
                     , configurator                      >= 0.3.0  && < 0.4
                     , containers                        >= 0.5.7  && < 0.6
                     , cryptohash                        >= 0.11.9 && < 0.12
                     , cryptonite                        >= 0.23   && < 0.24
                     , esqueleto                         >= 2.5.3  && < 2.6
                     , formatting                        >= 6.2.4  && < 6.3
                     , http-types                        >= 0.9.1  && < 0.10
                     , hvect                             >= 0.4.0  && < 0.5
                     , iso8601-time                      >= 0.1.4  && < 0.2
                     , jwt                               >= 0.7.2  && < 0.8
                     , mime-mail                         >= 0.4.14 && < 0.5
                     , monad-logger                      >= 0.3.25 && < 0.4
                     , mtl                               >= 2.2.1  && < 2.3
                     , network                           >= 2.6.3  && < 2.7
                     , persistent                        >= 2.7.0  && < 2.8
                     , persistent-sqlite                 >= 2.6.2  && < 2.7
                     , persistent-template               >= 2.5.2  && < 2.6
                     , random                            >= 1.1    && < 1.2
                     , regex-pcre                        >= 0.94.4 && < 0.95
                     , smtp-mail                         >= 0.1.4  && < 0.2
                     , text                              >= 1.2.2  && < 1.3
                     , time                              >= 1.6.0  && < 1.7
                     , transformers                      >= 0.5.2  && < 0.6
                     , word8                             >= 0.1.3  && < 0.2
                     , dhall                             >= 1.6.0  && < 1.7
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flatrapp/core
